tests/valid/arrays/uninitialized_zero.rs
/*
compilationExitCode: 0
*/

main(): i32 {
    a: [i64, 3];

    return a[0] + a[1] + a[2];
}