tests/invalid/arrays/literal_type_mismatch.rs
/*
compilationExitCode: 3
*/

main(): i32 {
    a: *i32;
    [1, 9+2, 2-5*2-1, a];
    return 0;
}